# Vega-sniper

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
bot/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
bot/alembic/: env.py
bot/alembic/versions/: 001_initial_schema.py
bot/app/: main.py
bot/app/core/: config.py
bot/app/db/: __init__.py  enums.py  middleware.py  session.py
bot/app/db/models/: __init__.py  search.py  subscription.py  user.py
bot/app/handlers/: base.py  errors.py  premium.py  search.py
bot/app/keyboards/: menu.py  search.py
bot/app/services/: matcher.py  premium_service.py  rabbitmq.py  search_service.py  subscription_service.py  user_service.py
bot/tests/: test_matcher.py
scrapers/mercari/: Dockerfile  go.mod  go.sum  main.go
scrapers/mercari/cmd/scraper/: main.go
scrapers/mercari/internal/domain/: interfaces.go  models.go
scrapers/mercari/internal/infrastructure/mercari/: client.go
scrapers/mercari/internal/infrastructure/postgres/: repository.go
scrapers/mercari/internal/infrastructure/rabbitmq/: publisher.go
scrapers/mercari/internal/usecase/: scraper.go
