[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "aiogram>=3.28.2",
    "alembic>=1.16.0",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "greenlet>=3.1.0",
]
